--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
         <version>2.2.5.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>br.com.pyinkr</groupId>
-    <artifactId>hplsql</artifactId>
+    <groupId>br.com.antlr</groupId>
+    <artifactId>antlr-hive</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>hplsql</name>
     <description>Demo project for Spring Boot</description>
